fix: text align center

--- a/foundations/intro-css/05-descendant-combinator/style.css
+++ b/foundations/intro-css/05-descendant-combinator/style.css
@@ -2,4 +2,5 @@ div p {
     color: red;
     background-color: yellow;
     font-size: 20px;
+    text-align: center;
 }
